--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,46 +31,44 @@ jobs:
           sudo wget -qO /usr/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 && sudo chmod +x /usr/bin/yq
           pip install cfn-lint
 
-      # Step 4: Loop through service folders and deploy
-      - name: Deploy all CloudFormation stacks
+      # Step 4: Deploy the CloudFormation stack
+      - name: Deploy CloudFormation stack
         run: |
-          # Use find to locate all directories that contain a 'parameters' sub-directory.
-          # This is more robust than looping through all top-level directories.
-          for SERVICE_DIR in $(find . -type d -name "parameters" -maxdepth 2 | xargs dirname); do
-            # The parameter file is expected to be inside the 'parameters' directory.
-            PARAM_FILE=$(find "$SERVICE_DIR/parameters" -maxdepth 1 -name "*.yml" | head -n 1)
-            # The template file is expected to be inside the 'templates' directory.
-            TEMPLATE_FILE=$(find "$SERVICE_DIR/templates" -maxdepth 1 -name "*.yml" | head -n 1)
+          # Define the paths to your specific parameter and template files
+          # The paths are relative to the root of your repository
+          PARAM_FILE="./parameters/uai3031404-dev-ds-nonprd-ecr.yml"
+          TEMPLATE_FILE="./templates/ecr.yml" # Assuming this is the correct template
+          STACK_NAME="uai3031404-dev-ds-nonprd-ecr" # Based on the parameter file name
 
-            if [ -z "$PARAM_FILE" ] || [ -z "$TEMPLATE_FILE" ]; then
-              echo "⚠️ Skipping $SERVICE_DIR (missing parameters/*.yml or templates/*.yml)"
-              continue
-            fi
+          # Check if the files exist before proceeding
+          if [ ! -f "$PARAM_FILE" ] || [ ! -f "$TEMPLATE_FILE" ]; then
+            echo "❌ ERROR: One or both of the required files do not exist."
+            echo "Checked for:"
+            echo "  - $PARAM_FILE"
+            echo "  - $TEMPLATE_FILE"
+            exit 1 # Exit the workflow with a failure
+          fi
 
-            # The stack name is derived from the parameter file's name.
-            STACK_NAME=$(basename "$PARAM_FILE" .yml)
+          echo "======================================"
+          echo "Deploying stack: $STACK_NAME"
+          echo "Parameters: $PARAM_FILE"
+          echo "Template:   $TEMPLATE_FILE"
+          echo "======================================"
 
-            echo "======================================"
-            echo "Deploying stack: $STACK_NAME"
-            echo "Parameters: $PARAM_FILE"
-            echo "Template:   $TEMPLATE_FILE"
-            echo "======================================"
+          # Run the linter to validate the CloudFormation template
+          cfn-lint "$TEMPLATE_FILE"
 
-            # Run the linter to check for template syntax errors and best practices.
-            cfn-lint "$TEMPLATE_FILE"
+          # Validate the template with the AWS CloudFormation service
+          aws cloudformation validate-template \
+            --template-body file://"$TEMPLATE_FILE"
 
-            # Validate the template with the AWS CloudFormation service.
-            aws cloudformation validate-template \
-              --template-body file://"$TEMPLATE_FILE"
+          # The fix: Convert parameters from YAML to the AWS CLI's required format.
+          # This yq command creates a space-separated string of ParameterKey=KEY,ParameterValue=VALUE pairs.
+          PARAMS=$(yq eval '. | to_entries | .[] | "ParameterKey=\(.key),ParameterValue=\(.value)"' "$PARAM_FILE" | paste -s -d ' ')
 
-            # The fix: Convert parameters.yml to the AWS CLI's required format.
-            # This yq command creates a space-separated string of "ParameterKey=KEY,ParameterValue=VALUE" pairs.
-            PARAMS=$(yq eval '. | to_entries | .[] | "ParameterKey=\(.key),ParameterValue=\(.value)"' "$PARAM_FILE" | paste -s -d ' ')
-
-            # Deploy or update the stack using the corrected parameter format.
-            aws cloudformation deploy \
-              --template-file "$TEMPLATE_FILE" \
-              --stack-name "$STACK_NAME" \
-              --parameter-overrides $PARAMS \
-              --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND
-          done
+          # Deploy or update the stack using the correct parameter format.
+          aws cloudformation deploy \
+            --template-file "$TEMPLATE_FILE" \
+            --stack-name "$STACK_NAME" \
+            --parameter-overrides $PARAMS \
+            --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND
