--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
     types:
-      - closed # Only run when PR is closed
+      - closed   # Only run when PR is closed
 
 jobs:
   deploy:
-    if: github.event.pull_request.merged == true # Run only if PR was merged
+    if: github.event.pull_request.merged == true   # Run only if PR was merged
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +23,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 # Change if needed
+          aws-region: us-east-1   # Change if needed
 
       # Step 3: Install tools (yq + cfn-lint)
       - name: Install dependencies
@@ -31,44 +31,40 @@ jobs:
           sudo wget -qO /usr/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 && sudo chmod +x /usr/bin/yq
           pip install cfn-lint
 
-      # Step 4: Deploy the CloudFormation stack
-      - name: Deploy CloudFormation stack
+      # Step 4: Loop through service folders and deploy
+      - name: Deploy all CloudFormation stacks
         run: |
-          # Define the paths to your specific parameter and template files
-          # The paths are relative to the root of your repository
-          PARAM_FILE="./parameters/uai3031404-dev-ds-nonprd-ecr.yml"
-          TEMPLATE_FILE="./templates/ecr.yml" # Assuming this is the correct template
-          STACK_NAME="uai3031404-dev-ds-nonprd-ecr" # Based on the parameter file name
+          for SERVICE_DIR in */; do
+            PARAM_FILE=$(find "$SERVICE_DIR/parameters" -maxdepth 1 -name "*.yml" | head -n 1)
+            TEMPLATE_FILE=$(find "$SERVICE_DIR/templates" -maxdepth 1 -name "*.yml" | head -n 1)
 
-          # Check if the files exist before proceeding
-          if [ ! -f "$PARAM_FILE" ] || [ ! -f "$TEMPLATE_FILE" ]; then
-            echo "❌ ERROR: One or both of the required files do not exist."
-            echo "Checked for:"
-            echo "  - $PARAM_FILE"
-            echo "  - $TEMPLATE_FILE"
-            exit 1 # Exit the workflow with a failure
-          fi
+            if [ -z "$PARAM_FILE" ] || [ -z "$TEMPLATE_FILE" ]; then
+              echo "⚠️ Skipping $SERVICE_DIR (missing parameters/*.yml or templates/*.yml)"
+              continue
+            fi
 
-          echo "======================================"
-          echo "Deploying stack: $STACK_NAME"
-          echo "Parameters: $PARAM_FILE"
-          echo "Template:   $TEMPLATE_FILE"
-          echo "======================================"
+            STACK_NAME=$(basename "$PARAM_FILE" .yml)
 
-          # Run the linter to validate the CloudFormation template
-          cfn-lint "$TEMPLATE_FILE"
+            echo "======================================"
+            echo "Deploying stack: $STACK_NAME"
+            echo "Parameters: $PARAM_FILE"
+            echo "Template:   $TEMPLATE_FILE"
+            echo "======================================"
 
-          # Validate the template with the AWS CloudFormation service
-          aws cloudformation validate-template \
-            --template-body file://"$TEMPLATE_FILE"
+            # Run linter
+            cfn-lint "$TEMPLATE_FILE"
 
-          # The fix: Convert parameters from YAML to the AWS CLI's required format.
-          # This yq command creates a space-separated string of ParameterKey=KEY,ParameterValue=VALUE pairs.
-          PARAMS=$(yq eval '. | to_entries | .[] | "ParameterKey=\(.key),ParameterValue=\(.value)"' "$PARAM_FILE" | paste -s -d ' ')
+            # Validate with AWS
+            aws cloudformation validate-template \
+              --template-body file://"$TEMPLATE_FILE"
 
-          # Deploy or update the stack using the correct parameter format.
-          aws cloudformation deploy \
-            --template-file "$TEMPLATE_FILE" \
-            --stack-name "$STACK_NAME" \
-            --parameter-overrides $PARAMS \
-            --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND
+            # Convert parameters.yml to AWS CLI format
+            PARAMS=$(yq eval '. as $map ireduce (""; . + " " + .key + "=" + (.value|tostring))' "$PARAM_FILE")
+
+            # Deploy stack
+            aws cloudformation deploy \
+              --template-file "$TEMPLATE_FILE" \
+              --stack-name "$STACK_NAME" \
+              --parameter-overrides $PARAMS \
+              --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND
+          done
