--- a/ECR/stack_master.yml
+++ b/ECR/stack_master.yml
@@ -7,4 +7,4 @@ stack_defaults:
 stacks:
   us-east-1:
     uai3031404-dev-ds-nonprd-ecr:
-      template: ecr.yml
+      template: templates/ecr.yml
