--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,9 @@ on:
       - main
 
 jobs:
-  deploy-cloudformation:
-    runs-on: ubuntu-latest
+  deploy:
+    if: github.event.pull_request.merged == true   # Run only if PR was merged
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout repository
