--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,23 @@
 name: Deploy CloudFormation Stack
 
 on:
-  push:
+  pull_request:
     branches:
       - main
+    types:
+      - closed # Only run when a PR is closed
 
 jobs:
-  deploy:
-    if: github.event.pull_request.merged == true   # Run only if PR was merged
-    runs-on: ubuntu-latest
-    
+  deploy:
+    if: github.event.pull_request.merged == true # Run only if the PR was merged
+    runs-on: ubuntu-latest
+
     steps:
+      # Step 1: Checkout the repository code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Step 2: Configure AWS credentials for the deployment
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -21,33 +25,47 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
 
-      - name: Install yq
-        run: sudo snap install yq
-
-      - name: Set Stack and Parameter File Names
-        id: set_file_names
+      # Step 3: Install necessary tools (yq + cfn-lint)
+      - name: Install dependencies
         run: |
-          PARAMETER_FILE=$(find ECR/parameters -name "*-nonprd-ecr.yml" -type f)
-          STACK_NAME=$(basename "$PARAMETER_FILE" .yml)
-          TEMPLATE_FILE=$(yq e '.stacks."ap-south-1".* | .template' ECR/stack_master.yml)
-          
-          echo "PARAMETER_FILE=$PARAMETER_FILE" >> $GITHUB_OUTPUT
-          echo "STACK_NAME=$STACK_NAME" >> $GITHUB_OUTPUT
-          echo "TEMPLATE_FILE=$TEMPLATE_FILE" >> $GITHUB_OUTPUT
+          sudo snap install yq
+          pip install cfn-lint
 
-      - name: Install cft-lint
-        run: pip install cft-lint
-
-      - name: Validate CloudFormation Files
+      # Step 4: Find the correct template and parameter files using yq
+      - name: Deploy CloudFormation Stacks from master file
         run: |
-          cft-lint -t ECR/templates/${{ steps.set_file_names.outputs.TEMPLATE_FILE }} \
-            -p ${{ steps.set_file_names.outputs.PARAMETER_FILE }}
+          MASTER_FILE="ECR/stack_master.yml"
+          REGION="ap-south-1"
 
-      - name: Deploy CloudFormation Stack
-        uses: aws-cloudformation/aws-cloudformation-deploy@v1
-        with:
-          name: ${{ steps.set_file_names.outputs.STACK_NAME }}
-          template: ECR/templates/${{ steps.set_file_names.outputs.TEMPLATE_FILE }}
-          parameters: ${{ steps.set_file_names.outputs.PARAMETER_FILE }}
-          capabilities: CAPABILITY_NAMED_IAM
-          region: ap-south-1
+          # Get stack defaults from the master file
+          DEFAULT_TAGS=$(yq e '.stack_defaults.tags' "$MASTER_FILE")
+
+          # Loop through each stack defined for the target region
+          yq e ".stacks[\"$REGION\"] | keys | .[]" "$MASTER_FILE" | while read STACK_NAME; do
+            # Extract file paths and other details for the specific stack
+            TEMPLATE_FILE_PATH=$(yq e ".stacks[\"$REGION\"][\"$STACK_NAME\"].template" "$MASTER_FILE")
+            PARAM_FILE_PATH=$(yq e ".stacks[\"$REGION\"][\"$STACK_NAME\"].parameters" "$MASTER_FILE")
+            
+            echo "======================================"
+            echo "Deploying stack: $STACK_NAME"
+            echo "Template: $TEMPLATE_FILE_PATH"
+            echo "Parameters: $PARAM_FILE_PATH"
+            echo "======================================"
+            
+            # Use cfn-lint to validate the CloudFormation template
+            cfn-lint "$TEMPLATE_FILE_PATH"
+
+            # Convert parameters.yml to the AWS CLI format
+            PARAMS=$(yq e '. as $map ireduce (""; . + " " + .key + "=" + (.value | tostring))' "$PARAM_FILE_PATH")
+
+            # Convert default tags to AWS CLI format
+            TAGS=$(echo "$DEFAULT_TAGS" | yq e '. | to_entries | .[] | "--tags Key=" + .key + ",Value=" + .value' - | paste -sd ' ' -)
+
+            # Deploy the stack using the AWS CLI
+            aws cloudformation deploy \
+              --template-file "$TEMPLATE_FILE_PATH" \
+              --stack-name "$STACK_NAME" \
+              --parameter-overrides $PARAMS \
+              --capabilities CAPABILITY_NAMED_IAM \
+              $TAGS
+          done
