--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,32 +17,28 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Debug file paths to confirm locations
-      - name: Verify file locations
-        run: |
-          ls -R
-
-      # Step 3: Configure AWS credentials for the deployment
+      # Step 2: Configure AWS credentials
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
+          # Change the region to match your stack_master.yml
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: us-east-1
 
-      # Step 4: Install necessary tools (yq + cfn-lint)
+      # Step 3: Install necessary tools (yq + cfn-lint)
       - name: Install dependencies
         run: |
           sudo snap install yq
           pip install cfn-lint
 
-      # Step 5: Deploy CloudFormation Stacks from master file
+      # Step 4: Deploy CloudFormation Stacks from master file
       - name: Deploy CloudFormation Stacks from master file
         run: |
           MASTER_FILE="ECR/stack_master.yml"
-          REGION="ap-south-1"
-
-          # Check if the master file exists before attempting to parse it
+          REGION="us-east-1"
+          
+          # Check if the master file exists and is not null
           if [ ! -f "$MASTER_FILE" ]; then
             echo "Error: The master file '$MASTER_FILE' was not found."
             exit 1
