--- a/ECR/stack_master.yml
+++ b/ECR/stack_master.yml
@@ -8,5 +8,5 @@ stacks:
   us-east-1:
     uai3031404-dev-ds-nonprd-ecr:
       template: ECR/templates/ecr.yml
-      ####ngffashvbb
+      ####ngffashvbbvc
       
