--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,9 @@ jobs:
       - name: Install cfn-lint
         run: pip install cfn-lint
 
-      - name: Validate CloudFormation Files
+      - name: Validate CloudFormation Template
         run: |
-          cfn-lint ECR/templates/${{ steps.set_file_names.outputs.TEMPLATE_FILE }} \
-            -p ${{ steps.set_file_names.outputs.PARAMETER_FILE }}
+          cfn-lint ECR/templates/${{ steps.set_file_names.outputs.TEMPLATE_FILE }}
 
       - name: Deploy CloudFormation Stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1
