--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,8 @@ jobs:
           fi
 
           STACK_NAME=$(basename "$PARAMETER_FILE" .yml)
-          TEMPLATE_FILE=$(yq e '.stacks."ap-south-1" | keys | .[0] | .template' ECR/stack_master.yml)
+          TEMPLATE_NAME_KEY=$(yq e '.stacks."ap-south-1" | keys | .[0]' ECR/stack_master.yml)
+          TEMPLATE_FILE=$(yq e '.stacks."ap-south-1"."'"${TEMPLATE_NAME_KEY}"'" | .template' ECR/stack_master.yml)
           
           echo "PARAMETER_FILE=$PARAMETER_FILE" >> $GITHUB_OUTPUT
           echo "STACK_NAME=$STACK_NAME" >> $GITHUB_OUTPUT
