--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,22 @@ jobs:
         id: set_file_names
         run: |
           PARAMETER_FILE=$(find ECR/parameters -name "*-nonprd-ecr.yml" -type f)
-          STACK_NAME=$(basename "$PARAMETER_FILE" .yml)
-          TEMPLATE_FILE=$(yq e '.stacks."ap-south-1".* | .template' ECR/stack_master.yml)
           
+          if [ -z "$PARAMETER_FILE" ]; then
+            echo "Error: No parameter file found in ECR/parameters with the pattern *-nonprd-ecr.yml"
+            exit 1
+          fi
+
+          STACK_NAME=$(basename "$PARAMETER_FILE" .yml)
+          
+          # Get the template file name from the stack_master.yml file.
+          TEMPLATE_FILE=$(yq e '.stacks."ap-south-1" | values[0] | .template' ECR/stack_master.yml)
+          
+          if [ -z "$TEMPLATE_FILE" ]; then
+            echo "Error: Could not find template file name in stack_master.yml"
+            exit 1
+          fi
+
           echo "PARAMETER_FILE=$PARAMETER_FILE" >> $GITHUB_OUTPUT
           echo "STACK_NAME=$STACK_NAME" >> $GITHUB_OUTPUT
           echo "TEMPLATE_FILE=$TEMPLATE_FILE" >> $GITHUB_OUTPUT
