--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
 
-      - name: Install yq
-        run: sudo snap install yq
+      - name: Install jq and yq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+          sudo snap install yq
 
       - name: Set Stack and Parameter File Names
         id: set_file_names
@@ -35,16 +38,8 @@ jobs:
 
           STACK_NAME=$(basename "$PARAMETER_FILE" .yml)
           
-          # Get the name of the dynamic key under 'ap-south-1'
-          TEMPLATE_KEY_NAME=$(yq e '.stacks."ap-south-1" | keys | .[0]' ECR/stack_master.yml)
-          
-          if [ -z "$TEMPLATE_KEY_NAME" ]; then
-            echo "Error: Could not find the dynamic key name in stack_master.yml"
-            exit 1
-          fi
-
-          # Use the key name to find the template file
-          TEMPLATE_FILE=$(yq e '.stacks."ap-south-1"."'"${TEMPLATE_KEY_NAME}"'" | .template' ECR/stack_master.yml)
+          # Convert YAML to JSON and parse with jq
+          TEMPLATE_FILE=$(yq -o=json ECR/stack_master.yml | jq -r '.stacks."ap-south-1" | values[0] | .template')
           
           if [ -z "$TEMPLATE_FILE" ]; then
             echo "Error: Could not find template file name in stack_master.yml"
