--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,46 @@
 name: Deploy CloudFormation Stack
 
 on:
-  push:
-    branches:
-      - main
+  push:
+    branches:
+      - main
 
 jobs:
-  deploy-cloudformation:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  deploy-cloudformation:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
 
-      - name: Install yq
-        run: sudo snap install yq
+      - name: Install yq
+        run: sudo snap install yq
 
-      - name: Set Stack and Parameter File Names
-        id: set_file_names
-        run: |
-          PARAMETER_FILE=$(find ECR/parameters -name "*-nonprd-ecr.yml" -type f)
-          STACK_NAME=$(basename "$PARAMETER_FILE" .yml)
-          TEMPLATE_FILE=$(yq e '.stacks."ap-south-1".* | .template' ECR/stack_master.yml)
-          
-          echo "PARAMETER_FILE=$PARAMETER_FILE" >> $GITHUB_OUTPUT
-          echo "STACK_NAME=$STACK_NAME" >> $GITHUB_OUTPUT
-          echo "TEMPLATE_FILE=$TEMPLATE_FILE" >> $GITHUB_OUTPUT
+      - name: Set Stack and Parameter File Names
+        id: set_file_names
+        run: |
+          PARAMETER_FILE=$(find ECR/parameters -name "*-nonprd-ecr.yml" -type f)
+          STACK_NAME=$(basename "$PARAMETER_FILE" .yml)
+          # Use yq to find the correct template filename.
+          # Assuming a structure like `stacks: ap-south-1: template: ecr.yml`
+          TEMPLATE_FILE=$(yq e '.stacks.ap-south-1.template' ECR/stack_master.yml)
+          
+          echo "PARAMETER_FILE=$PARAMETER_FILE" >> $GITHUB_OUTPUT
+          echo "STACK_NAME=$STACK_NAME" >> $GITHUB_OUTPUT
+          echo "TEMPLATE_FILE=$TEMPLATE_FILE" >> $GITHUB_OUTPUT
 
-      # - name: Install cfn-lint
-      #   run: pip install cfn-lint
-
-      # - name: Validate CloudFormation Template
-      #   run: |
-      #     cfn-lint ECR/templates/${{ steps.set_file_names.outputs.TEMPLATE_FILE }}
-
-      - name: Deploy CloudFormation Stack
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          name: ${{ steps.set_file_names.outputs.STACK_NAME }}
-          template: ECR/templates/${{ steps.set_file_names.outputs.TEMPLATE_FILE }}
-          parameters: ${{ steps.set_file_names.outputs.PARAMETER_FILE }}
-          capabilities: CAPABILITY_NAMED_IAM
-          region: ap-south-1
+      - name: Deploy CloudFormation Stack
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: ${{ steps.set_file_names.outputs.STACK_NAME }}
+          template: ECR/templates/${{ steps.set_file_names.outputs.TEMPLATE_FILE }}
+          parameter-overrides: |
+            $(yq e '. | to_json' ${{ steps.set_file_names.outputs.PARAMETER_FILE }})
+          capabilities: CAPABILITY_NAMED_IAM
